2001-09-25  James Henstridge  <james@daa.com.au>

	* gtk/gdk.override (_wrap_gdk_device__get_axes): change to getter.
	(_wrap_gdk_device__get_keys): turn into a getter.
	(_wrap_gdk_drag_context__get_targets): same here.

	* gtk/gtk.override (_wrap_gtk_clist__get_selection): turn into a
	getter.
	(_wrap_gtk_ctree__get_selection): turn into a getter.

	* codegen/codegen.py (write_getsets): rename to write_getsets, and
	don't allow overriding the whole routine, as it is implemented as
	a number of smaller routines now.
	(gettertmpl): rename from getattrtmpl.  Refactor for handling
	single attribute.
	(write_getsets): finish conversion over to using getsets.
	(write_class): call write_getsets instead.
	(typetmpl): substitute %(getsets)s rather than %(getattr)s.

2001-09-23  James Henstridge  <james@daa.com.au>

	* gtk/__init__.py: don't import ExtensionClass.

	* gobjectmodule.c (object_gc_free): new function to free an GC
	managed object.
	(PyGObject_Type): use object_gc_free for the tp_free slot.

	* codegen/codegen.py (write_class): don't write getattr routine.
	This is a temporary hack to see if things work.

	* gobjectmodule.c (pygobject_dealloc): handle case of destruction
	when self->obj == NULL.

	* gtk/gtk.override (_wrap_gtk_clist_new_with_titles): return an
	int.
	(_wrap_gtk_tree_view_get_path_at_pos): same here.
	(_wrap_gtk_button_new): same here.
	(_wrap_gtk_toggle_button_new): same here.
	(_wrap_gtk_check_button_new): same here.
	(_wrap_gtk_radio_button_new): same here.
	(_wrap_gtk_list_item_new): same here.
	(_wrap_gtk_menu_item_new): same here.
	(_wrap_gtk_check_menu_item_new): same here.
	(_wrap_gtk_radio_menu_item_new): same here.
	(_wrap_gtk_ctree_new_with_titles): same here.
	(_wrap_gtk_dialog_new_with_buttons): same here.
	(_wrap_gtk_message_dialog_new): same here.
	(_wrap_gtk_message_dialog_new): same here.

	* gtk/gdk.override (_wrap_gdk_cursor_new): return an int.

	* pango.override (_wrap_pango_font_description_new): constructors
	return ints.
